--- a/index.html
+++ b/index.html
@@ -52,11 +52,23 @@
 
   <div id="results-modal" class="modal" style="display: none;">
     <div class="modal-content">
-      <span class="close-btn" onclick="toggleResults()">&times;</span>
+      <span class="close-btn" onclick="closeResultsModal()">&times;</span>
       <div id="results-container"></div>
     </div>
   </div>
 
+  <div id="password-modal" class="modal" style="display: none;">
+    <div class="modal-content" style="max-width: 320px; padding: 1.5rem; text-align: center; height: auto;">
+      <span class="close-btn" onclick="closePasswordModal()">&times;</span>
+      <h2 style="margin-bottom: 1rem;">Enter Password</h2>
+      <form id="password-form">
+        <input id="results-password-input" type="password" placeholder="Password"
+               style="padding: 0.5rem; border-radius: 8px; border: 1px solid #ccc; width: 100%;" />
+        <button id="password-submit-btn" type="submit" class="remove-button" style="margin-top: 1rem;">Submit</button>
+      </form>
+    </div>
+  </div>
+  
   <!-- Firebase + App -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
